--- a/experiencia.html
+++ b/experiencia.html
@@ -39,6 +39,9 @@
 	</nav>
 	<section>
 		<h2>Experiencia</h2>
+		<h3>
+			<strong>Video. Quien soy...</strong>
+		</h3>
 		<p>
 			<video controls poster="images/next.png">
 				<source src="videos/video.mp4" type="video/mp4">
@@ -48,9 +51,9 @@
 		</p>
 	</section>
 	<section>
-		<p>
-			Mis hobbies...
-		</p>
+		<h3>
+			<strong>Audio. Mis Pasatiempos...</strong>
+		</h3>
 		<p>
 			<audio controls autoplay="off">
 				<source src="audios/audio.mp3" type="audio/mp3">
